<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="24sp"
            />
        <TextView
            android:id="@+id/isss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isss_result"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/afp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/afp_result"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rent_result"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/base_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/salary_result"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/perceived_salary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/perceived_salary_result"
            android:textSize="20sp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>